# career-agent

./: pyproject.toml
app/: database.py  job_crawler.py  job_recommender.py  main.py  models.py  resume_parser.py
frontend/: index.html  pyproject.toml
frontend/streamlit-app/: streamlit_app.py
frontend/streamlit-app/app/: main.py
