[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["devin-ai-integration[bot] <158243242+devin-ai-integration[bot]@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.115.5"}
psycopg = {extras = ["binary"], version = "^3.2.3"}
langchain = "^0.1.0"
chromadb = "^0.4.22"
pypdf = "^3.17.1"
streamlit = "^1.29.0"
python-multipart = "^0.0.7"
sqlalchemy = "^2.0.23"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
sentence-transformers = "^2.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
