[tool.poetry]
name = "career-agent-frontend"
version = "0.1.0"
description = ""
authors = ["devin-ai-integration[bot] <158243242+devin-ai-integration[bot]@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.40.1"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
